pkg/deps/testdata/ub/manifest/invalid/non-boolean-indirect.ub
manifest: {
  requires: {
    'github.com/x/y': {
      version:  'v1.2.3'
      indirect: 'true'
    }
  }
}
